services/adguard-home/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    name: adguard-home
