services/adguard-home/resources/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  hostnames:
  - adguard-home.k8s.cguertin.dev
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: adguard-home
      port: 3000
