services/adguard-home/resources/security-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: adguard-home-oauth
  namespace: adguard-home
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: adguard-home
  extAuth:
    headersToExtAuth:
    - host
    - cookie
    - x-forwarded-proto
    - x-forwarded-host
    - x-forwarded-uri
    http:
      backendRefs:
      - name: oauth2-proxy
        namespace: kube-system
        port: 4180
      path: /oauth2
      headersToBackend:
      - x-auth-request-user
      - x-auth-request-email
      - x-auth-request-access-token
